fixing mobile layout issues

--- a/corner-app/src/components/Base.module.css
+++ b/corner-app/src/components/Base.module.css
@@ -5,18 +5,17 @@
   align-items: center;
 
   max-width: 100vw;
-  min-height: 100vh;
 }
 
 .main {
   display: flex;
   position: relative;
   flex-direction: column;
+  flex: 1;
   width: 100vw;
 }
 
 .body {
-  min-height: calc(100vh - 51px);
   margin-top: 51px;
   background-color: #fff;
 }
@@ -86,5 +85,8 @@
   }
   .main {
     width: 600px;
+  }
+  .body {
+    min-height: calc(100vh - 51px);
   }
 }
