--- a/corner-app/src/pages/app/onboarding.module.css
+++ b/corner-app/src/pages/app/onboarding.module.css
@@ -1,9 +1,3 @@
-.buttonContainer {
-  position: fixed;
-  /* bottom: 0px;
-  left: 0px; */
-}
-
 .backButton {
   position: absolute;
   bottom: 20px;
@@ -18,13 +12,9 @@
 
 @media (min-width: 768px) {
   .backButton {
-    position: absolute;
     bottom: 32px;
-    left: 1rem;
   }
   .forwardButton {
-    position: absolute;
     bottom: 32px;
-    right: 1rem;
   }
 }
